Fixed misaligned filters in content column when 1column layout is used

--- a/web/css/layout/_layered-navigation.less
+++ b/web/css/layout/_layered-navigation.less
@@ -149,6 +149,8 @@
     @media @media-md {
         .column.main {
             .block.filter {
+                margin-bottom: @4;
+
                 .filter-title {
                     display: none;
                 }
