--- a/web/css/layout/listing/_toolbar.less
+++ b/web/css/layout/listing/_toolbar.less
@@ -6,10 +6,6 @@
         gap: @3;
         margin: 0 0 @5;
 
-        div ~ & {
-            margin-top: @5;
-        }
-
         ~ .products {
             margin-top: @5;
         }
